--- a/scss/_pricing.scss
+++ b/scss/_pricing.scss
@@ -1,7 +1,7 @@
 .pricing-box {
 	border-radius: 4px;
-	border: solid 1px $border-color;
-	background-color: $white;
+	border: solid 1px #ffffff;
+    border: solid 1px #3c37f1 !important;
 	padding: 17px;
 	text-align: center;
 	margin-top: 40px;
